<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:overScrollMode="never"
    android:padding="24dp"
    android:scrollbars="none"
    android:background="@drawable/app_background_1"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/anim2"
            android:layout_width="300dp"
            android:layout_height="300dp"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            android:visibility="visible"
            android:layout_gravity="center_horizontal"
            app:lottie_rawRes="@raw/select_anim"/>



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="SELECT FROM BELOW"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:gravity="center_horizontal"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/literacy"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="@string/literacy_games"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:backgroundTint="#D3D3D3"
            app:cornerRadius="10dp"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/numeracy"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="@string/numeracy_games"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:backgroundTint="#D3D3D3"
            app:cornerRadius="10dp"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/evs"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="@string/evs_games"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:backgroundTint="#D3D3D3"
            app:cornerRadius="10dp"/>



    </LinearLayout>

</ScrollView>